RESOLVED FIXED88033
[BlackBerry] Bridge Apps - Apps do not redraw correctly after orientation change
https://bugs.webkit.org/show_bug.cgi?id=88033
Summary [BlackBerry] Bridge Apps - Apps do not redraw correctly after orientation change
Jacky Jiang
Reported 2012-05-31 18:00:02 PDT
Steps to reproduce: 1) Open all bridge apps 2) Open carousel 3) Rotate PB 4) Observe all Bridge apps Expected result: All apps redraw correctly Actual Result: Apps redraw correctly EXCEPT the bridge app 2 carousel positions away from the centred app on rotate. Note: This only happens when the PB is rotated in carousel mode (not when an app is in-focus)
Attachments
committed,r=rwlbuis (2.72 KB, patch)
2012-05-31 18:17 PDT, Jacky Jiang
no flags
Jacky Jiang
Comment 1 2012-05-31 18:17:59 PDT
Created attachment 145187 [details] committed,r=rwlbuis
Rob Buis
Comment 2 2012-05-31 18:39:45 PDT
Comment on attachment 145187 [details] committed,r=rwlbuis LGTM.
Jacky Jiang
Comment 3 2012-06-01 12:07:52 PDT
Note You need to log in before you can comment on or make changes to this bug.